--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,3 +1,79 @@
-@import "~bootstrap/scss/bootstrap";
+// @import "~bootstrap/scss/bootstrap";
 
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+header{
+    .container{
+        width: 1200px;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding: 1rem 0rem;
+    }
+
+    img{
+        width: 4rem;
+    }
+
+    .logo{
+        background-image: url(../img/dc-logo.png);
+        background-repeat: no-repeat;
+        width: 50%;
+        display: flex;
+        height: 7rem;
+    }
+
+    nav {
+        width: 100%;
+        ul{
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            list-style-type: none;
+                li{
+                    font-size: .8rem;
+                    padding: .5rem;
+                    font-weight: 600;
+                    text-transform: uppercase;
+                    &.active a{
+                        color: #0080ff;
+                        border-bottom: 4px  solid #0080ff;
+                    }
+                }
+        }
+
+        a{
+            color: black;
+            text-decoration: none;
+        }
+    }
+}
+section.jumbo{
+    background-image: url(../img/jumbotron.jpg);
+    background-repeat: no-repeat;
+    margin: 0 auto;
+    height: 400px;
+}
+
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0 auto;
+
+
+    button{
+        border: none;
+        padding: .5rem 2.5rem;
+        background-color:#0080ff;
+        color: white;
+        text-transform: uppercase;
+        font-weight: bolder;
+        margin: 4rem;
+    }
+}
